--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -22,12 +22,16 @@
     "@angular/router": "~14.1.2",
     "@auth0/angular-jwt": "^5.0.2",
     "@swimlane/ngx-charts": "^19.2.0",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-annotation": "^2.0.1",
     "file-saver": "^2.0.5",
     "gatsby": "^2.19.38",
     "moment": "^2.29.1",
     "ng-recaptcha": "^10.0.0",
     "ng-socket-io": "^0.2.4",
+    "ng2-charts": "^4.0.0",
     "ngx-captcha": "^11.0.0",
+    "ngx-color-picker": "^12.0.1",
     "ngx-socket-io": "^4.1.0",
     "npm": "^8.5.3",
     "rxjs": "~7.4.0",
