--- a/GestorFront-end/Dockerfile
+++ b/GestorFront-end/Dockerfile
@@ -1,13 +1,14 @@
-# Stage 0, based on Node.js, to build and compile Angular
-FROM node:16-alpine as node
+#Primera Etapa
+FROM node:14.15.4 as node
 WORKDIR /app
 COPY ./ /app/
-RUN npm install --save --location=global npm --force
+RUN npm install 
 RUN npm link @angular/cli --force
 ARG configuration=production
-RUN npm run build --force
+RUN npm run build
 
-# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
-FROM nginx:alpine
+#Segunda Etapa
+FROM nginx:1.17.1-alpine
+	#Si estas utilizando otra aplicacion cambia PokeApp por el nombre de tu app
 COPY --from=node /app/dist/reportesFront /usr/share/nginx/html
 COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
