--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -10,57 +10,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.1",
-    "@angular/cdk": "^14.1.2",
-    "@angular/common": "~14.2.1",
-    "@angular/compiler": "~14.2.1",
-    "@angular/core": "~14.2.1",
-    "@angular/forms": "~14.2.1",
-    "@angular/material": "^14.1.2",
-    "@angular/platform-browser": "~14.2.1",
-    "@angular/platform-browser-dynamic": "~14.2.1",
-    "@angular/router": "~14.2.1",
+    "@angular/animations": "~14.2.3",
+    "@angular/cdk": "^14.2.2",
+    "@angular/common": "~14.2.3",
+    "@angular/compiler": "~14.2.3",
+    "@angular/core": "~14.2.3",
+    "@angular/forms": "~14.2.3",
+    "@angular/material": "^14.2.2",
+    "@angular/platform-browser": "~14.2.3",
+    "@angular/platform-browser-dynamic": "~14.2.3",
+    "@angular/router": "~14.2.3",
     "@auth0/angular-jwt": "^5.0.2",
-    "@fortawesome/angular-fontawesome": "^0.11.1",
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@swimlane/ngx-charts": "^19.2.0",
     "chart.js": "^3.9.1",
-    "chartjs-plugin-annotation": "^2.0.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
-    "gatsby": "^2.19.38",
-    "moment": "^2.29.1",
-    "ng-recaptcha": "^10.0.0",
-    "ng-socket-io": "^0.2.4",
-    "ng2-charts": "^4.0.0",
-    "ngx-captcha": "^11.0.0",
-    "ngx-color-picker": "^12.0.1",
-    "ngx-socket-io": "^4.1.0",
-    "npm": "^8.5.3",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
-    "update": "^0.4.2",
-    "xlsx": "^0.17.5",
-    "zone.js": "~0.11.4"
+    "gatsby": "^4.23.1",
+    "latest-version": "^7.0.0",
+    "moment": "^2.29.4",
+    "ng2-charts": "^4.0.1",
+    "npm": "^8.19.2",
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "update": "^0.7.4",
+    "xlsx": "^0.18.5",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.1",
-    "@angular/cli": "^14.1.2",
-    "@angular/compiler-cli": "~14.2.1",
-    "@types/d3": "^7.1.0",
+    "@angular-devkit/build-angular": "^14.2.3",
+    "@angular/cli": "^14.2.3",
+    "@angular/compiler-cli": "~14.2.3",
+    "@types/d3": "^7.4.0",
     "@types/d3-scale": "^4.0.2",
-    "@types/d3-selection": "^3.0.2",
+    "@types/d3-selection": "^3.0.3",
     "@types/file-saver": "^2.0.5",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.4"
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.7.18",
+    "jasmine-core": "~4.4.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.8.3"
   }
 }
