--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -10,47 +10,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.3",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "~14.2.3",
-    "@angular/compiler": "~14.2.3",
-    "@angular/core": "~14.2.3",
-    "@angular/forms": "~14.2.3",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "~14.2.3",
-    "@angular/platform-browser-dynamic": "~14.2.3",
-    "@angular/router": "~14.2.3",
-    "@auth0/angular-jwt": "^5.0.2",
-    "chart.js": "^3.9.1",
+    "@angular/animations": "~15.0.2",
+    "@angular/cdk": "^15.0.1",
+    "@angular/common": "~15.0.2",
+    "@angular/compiler": "~15.0.2",
+    "@angular/core": "~15.0.2",
+    "@angular/forms": "~15.0.2",
+    "@angular/material": "^15.0.1",
+    "@angular/platform-browser": "~15.0.2",
+    "@angular/platform-browser-dynamic": "~15.0.2",
+    "@angular/router": "~15.0.2",
+    "@auth0/angular-jwt": "^5.1.0",
+    "chart.js": "^4.0.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
-    "gatsby": "^4.23.1",
+    "gatsby": "^5.2.0",
     "latest-version": "^7.0.0",
     "moment": "^2.29.4",
-    "ng2-charts": "^4.0.1",
-    "npm": "^8.19.2",
-    "rxjs": "~7.5.6",
-    "tslib": "^2.4.0",
+    "ng2-charts": "^4.1.1",
+    "npm": "^9.1.3",
+    "rxjs": "~7.6.0",
+    "tslib": "^2.4.1",
     "update": "^0.7.4",
     "xlsx": "^0.18.5",
-    "zone.js": "~0.11.8"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.3",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "~14.2.3",
+    "@angular-devkit/build-angular": "^15.0.2",
+    "@angular/cli": "^15.0.2",
+    "@angular/compiler-cli": "~15.0.2",
     "@types/d3": "^7.4.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.3",
     "@types/file-saver": "^2.0.5",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^18.7.18",
-    "jasmine-core": "~4.4.0",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^18.11.11",
+    "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.3"
+    "typescript": ">=4.8.2 < 4.9.0"
   }
 }
