--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.0.2",
+    "@angular/animations": "~16.2.4",
     "@angular/cdk": "^15.0.1",
-    "@angular/common": "~15.0.2",
-    "@angular/compiler": "~15.0.2",
-    "@angular/core": "~15.0.2",
-    "@angular/forms": "~15.0.2",
+    "@angular/common": "~16.2.4",
+    "@angular/compiler": "~16.2.4",
+    "@angular/core": "~16.2.4",
+    "@angular/forms": "~16.2.4",
     "@angular/material": "^15.0.1",
-    "@angular/platform-browser": "~15.0.2",
-    "@angular/platform-browser-dynamic": "~15.0.2",
-    "@angular/router": "~15.0.2",
+    "@angular/platform-browser": "~16.2.4",
+    "@angular/platform-browser-dynamic": "~16.2.4",
+    "@angular/router": "~16.2.4",
     "@auth0/angular-jwt": "^5.1.0",
     "bn-ng-idle": "^2.0.5",
     "chart.js": "^4.0.1",
@@ -34,12 +34,12 @@
     "tslib": "^2.4.1",
     "update": "^0.4.2",
     "xlsx": "^0.18.5",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.2",
-    "@angular/cli": "^15.0.2",
-    "@angular/compiler-cli": "~15.0.2",
+    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular/cli": "^16.2.1",
+    "@angular/compiler-cli": "~16.2.4",
     "@types/d3": "^7.4.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.3",
@@ -52,6 +52,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": ">=4.8.2 < 4.9.0"
+    "typescript": "5.1.6"
   }
 }
