--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/core": "^16.2.5"
+    "@angular-devkit/build-angular": "^16.2.2",
+    "@angular/core": "^16.2.5",
+    "@angular/material": "^16.2.4",
+    "@auth0/angular-jwt": "^5.1.2",
+    "bn-ng-idle": "^2.0.5",
+    "ng-hcaptcha": "^2.2.0"
   }
 }
