--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -10,10 +10,25 @@
   "license": "ISC",
   "dependencies": {
     "@angular-devkit/build-angular": "^16.2.2",
+    "@angular/animations": "^16.2.5",
+    "@angular/cdk": "^16.2.4",
     "@angular/core": "^16.2.5",
+    "@angular/forms": "^16.2.5",
     "@angular/material": "^16.2.4",
+    "@angular/platform-browser-dynamic": "^16.2.5",
+    "@angular/router": "^16.2.5",
     "@auth0/angular-jwt": "^5.1.2",
     "bn-ng-idle": "^2.0.5",
-    "ng-hcaptcha": "^2.2.0"
+    "chart.js": "^4.4.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
+    "ng-hcaptcha": "^2.2.0",
+    "ng2-charts": "^5.0.3",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@angular/cli": "^16.2.2",
+    "@types/file-saver": "^2.0.5"
   }
 }
