--- a/GestorFront-end/package.json
+++ b/GestorFront-end/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^17.2.3",
     "@angular/animations": "~16.2.4",
     "@angular/cdk": "^15.0.1",
     "@angular/common": "~16.2.4",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~16.2.4",
     "@angular/router": "~16.2.4",
     "@auth0/angular-jwt": "^5.1.0",
+    "@schematics/angular": "^17.2.3",
     "bn-ng-idle": "^2.0.5",
     "chart.js": "^4.0.1",
     "exceljs": "^4.3.0",
@@ -38,8 +40,8 @@
     "zone.js": "~0.13.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.1",
-    "@angular/cli": "^16.2.1",
+    "@angular-devkit/build-angular": "^17.2.3",
+    "@angular/cli": "^17.2.3",
     "@angular/compiler-cli": "~16.2.4",
     "@types/d3": "^7.4.0",
     "@types/d3-scale": "^4.0.2",
