--- a/GestorFront-end/angular.json
+++ b/GestorFront-end/angular.json
@@ -74,10 +74,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "reportesFront:build:production"
+              "buildTarget": "reportesFront:build:production"
             },
             "development": {
-              "browserTarget": "reportesFront:build:development"
+              "buildTarget": "reportesFront:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -85,7 +85,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "reportesFront:build"
+            "buildTarget": "reportesFront:build"
           }
         },
         "test": {
